--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     ]
   },
   "dependencies": {
+    "chokidar": "^3.5.2",
     "cron": "^1.8.2",
     "fs-extra": "^8.1.0",
     "log4js": "^6.3.0",
