--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
+    "start:dev": "nodemon ./index.js",
     "prettify": "prettier --write \"*.js\""
   },
   "author": "yuvarajsomavamshi@gmail.com",
@@ -26,10 +27,12 @@
     "cron": "^1.8.2",
     "fs-extra": "^8.1.0",
     "log4js": "^6.3.0",
+    "mkdirp": "^1.0.4",
     "request": "^2.88.2"
   },
   "devDependencies": {
     "husky": "^5.1.1",
+    "nodemon": "^2.0.9",
     "prettier": "^2.2.1"
   }
 }
