--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "chokidar": "^3.5.2",
     "cron": "^1.8.2",
     "fs-extra": "^8.1.0",
+    "ioredis": "^4.27.6",
     "log4js": "^6.3.0",
     "mkdirp": "^1.0.4",
     "request": "^2.88.2"
